--- a/yljapp/src/main/res/layout/fragment_wifi_connect.xml
+++ b/yljapp/src/main/res/layout/fragment_wifi_connect.xml
@@ -17,15 +17,18 @@
                 android:id="@+id/tv_wifi_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
                 android:text="@string/connect_wifi_not_open"
-                android:textSize="30sp"/>
+                android:textSize="40sp"/>
             <Button
                 android:id="@+id/bt_open_wifi"
+                style="@style/BlueButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/connect_open_wifi"/>
             <Button
                 android:id="@+id/bt_connect"
+                style="@style/BlueButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/connect_connect"/>
