--- a/yljapp/src/main/res/layout/activity_adjust.xml
+++ b/yljapp/src/main/res/layout/activity_adjust.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+            android:titleTextAppearance="@dimen/text_title"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
             app:layout_scrollFlags="scroll|enterAlways">
@@ -30,6 +31,8 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="end|bottom" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/fab_color"
+        app:rippleColor="@color/fab_color_clicked"
+        android:src="@drawable/next" />
 
 </android.support.design.widget.CoordinatorLayout>
