--- a/yljapp/src/main/res/layout/activity_adjust_result.xml
+++ b/yljapp/src/main/res/layout/activity_adjust_result.xml
@@ -21,6 +21,8 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="end|bottom" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/fab_color"
+        app:rippleColor="@color/fab_color_clicked"
+        android:src="@drawable/next" />
 
 </android.support.design.widget.CoordinatorLayout>
