--- a/yljapp/src/main/res/layout/content_sensor.xml
+++ b/yljapp/src/main/res/layout/content_sensor.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_sensor" tools:context="com.ylj.connect.SensorActivity">
 
     <LinearLayout
+        android:background="@drawable/layout_white"
+        android:layout_marginTop="50dp"
         android:layout_centerInParent="true"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="600dp"
+        android:padding="30dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_quake"/>
             <EditText
@@ -37,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_temp"/>
             <EditText
@@ -54,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_pulse"/>
             <EditText
@@ -70,7 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_heading"/>
             <EditText
@@ -86,7 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_pitch"/>
             <EditText
@@ -102,7 +107,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                style="@style/CommonSummary"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_roll"/>
             <EditText
@@ -120,12 +126,15 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btn_start"
+                style="@style/BlueSmallButton"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/sensor_start"/>
             <Button
                 android:id="@+id/btn_stop"
+                android:layout_marginLeft="10dp"
+                style="@style/BlueSmallButton"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
