--- a/yljapp/src/main/res/layout/content_task_modify.xml
+++ b/yljapp/src/main/res/layout/content_task_modify.xml
@@ -10,7 +10,7 @@
 
     <ScrollView
         android:background="@drawable/layout_white"
-        android:layout_width="450dp"
+        android:layout_width="500dp"
         android:padding="20dp"
         android:paddingTop="10dp"
         android:layout_height="match_parent"
@@ -29,6 +29,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_save_and_adjust"
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -48,6 +49,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_enter_adjust"
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
