--- a/yljapp/src/main/res/layout/layout_task_modify.xml
+++ b/yljapp/src/main/res/layout/layout_task_modify.xml
@@ -35,6 +35,7 @@
 
                 <EditText
                     android:id="@+id/et_task_name"
+                    style="@style/CenterEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -52,6 +53,7 @@
 
                 <EditText
                     android:id="@+id/et_road_name"
+                    style="@style/CenterEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
