--- a/yljapp/src/main/res/layout/listview_bt_device_item.xml
+++ b/yljapp/src/main/res/layout/listview_bt_device_item.xml
@@ -5,11 +5,17 @@
 
     <TextView
         android:id="@+id/tv_name"
+        android:textSize="20dp"
+        android:layout_marginTop="10sp"
+        android:layout_marginBottom="5dp"
+        android:textColor="@color/common_text_black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_address"
+        android:layout_marginBottom="5dp"
+        android:textColor="@color/common_sub_text_grep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
