--- a/yljapp/src/main/res/layout/listview_task_manager_not_finish.xml
+++ b/yljapp/src/main/res/layout/listview_task_manager_not_finish.xml
@@ -15,18 +15,21 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_task_name"
+                style="@style/CommonGrepTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/tv_no_adjust"
+                style="@style/CommonGrepTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(not adjust)"/>
+                android:text="@string/alert_no_adjust"/>
             <TextView
                 android:id="@+id/tv_no_finish"
+                style="@style/CommonGrepTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(not finish)"/>
+                android:text="@string/alert_no_finish"/>
         </LinearLayout>
 
 
@@ -49,9 +52,9 @@
 
     <Button
         android:id="@+id/btn_detele"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:text="delete"/>
+        style="@style/DeleteButton"
+        android:focusable="false" />
 </RelativeLayout>
