--- a/yljapp/src/main/res/values/ylj_style.xml
+++ b/yljapp/src/main/res/values/ylj_style.xml
@@ -68,6 +68,13 @@
         <item name="android:layout_marginBottom">4dp</item>
     </style>
 
+    <style name="CommonGrepTitle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/common_sub_text_grep</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
     <style name="CommonTag">
         <item name="android:textSize">20dp</item>
         <item name="android:layout_marginTop">5dp</item>
@@ -80,6 +87,22 @@
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:layout_width">100dp</item>
+    </style>
+
+    <style name="EditButton">
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/edit</item>
+        <item name="android:layout_centerInParent">true</item>
+    </style>
+
+    <style name="DeleteButton">
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/delete</item>
+        <item name="android:layout_centerInParent">true</item>
     </style>
 
     <!--<style name="FabStyle">-->
