--- a/yljapp/src/main/res/layout/activity_passwd_modify.xml
+++ b/yljapp/src/main/res/layout/activity_passwd_modify.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
+    android:background="@drawable/background_horizontal"
     tools:context="com.ylj.staff.PasswdModifyActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
@@ -11,7 +12,7 @@
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" android:theme="@style/AppTheme.AppBarOverlay"
+            android:background="@drawable/background_horizontal" android:theme="@style/AppTheme.AppBarOverlay"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
