--- a/yljapp/src/main/res/layout/content_passwd_modify.xml
+++ b/yljapp/src/main/res/layout/content_passwd_modify.xml
@@ -11,9 +11,11 @@
     tools:context="com.ylj.staff.PasswdModifyActivity">
 
     <LinearLayout
+        android:background="@drawable/layout_white"
         android:layout_width="400dp"
+        android:padding="30dp"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
+        android:layout_height="430dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -23,12 +25,15 @@
             android:layout_height="wrap_content"
             android:visibility="gone">
             <TextView
+                style="@style/CommonTag"
                 android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/staff_old_passwd"/>
             <EditText
                 android:id="@+id/et_old_passwd"
+                style="@style/CenterEdit"
+                android:password="true"
                 android:layout_alignParentRight="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -38,12 +43,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                style="@style/CommonTag"
                 android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/staff_new_passwd"/>
             <EditText
                 android:id="@+id/et_new_passwd"
+                style="@style/CenterEdit"
+                android:password="true"
                 android:layout_alignParentRight="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -53,25 +61,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                style="@style/CommonTag"
                 android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/staff_passwd_again"/>
             <EditText
                 android:id="@+id/et_passwd_again"
+                style="@style/CenterEdit"
+                android:password="true"
                 android:layout_alignParentRight="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <TextView
             android:id="@+id/tv_message"
+            style="@style/CommonTag"
+            android:visibility="gone"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btn_save_passwd"
+                style="@style/BlueButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/staff_save"/>
