--- a/yljapp/src/main/res/layout/content_staff_manager.xml
+++ b/yljapp/src/main/res/layout/content_staff_manager.xml
@@ -2,25 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_staff_manager"
     tools:context="com.ylj.staff.StaffManagerActivity">
 
     <RelativeLayout
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="600dp">
         <LinearLayout
+            android:layout_marginLeft="50dp"
             android:id="@+id/layout_admin"
+            android:background="@drawable/layout_white"
             android:orientation="vertical"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
+            android:padding="25dp"
             android:layout_height="match_parent">
             <RelativeLayout
                 android:id="@+id/rl_admin_info"
+                android:layout_marginBottom="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -28,52 +28,58 @@
                     android:id="@+id/image_admin"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@drawable/user_image"/>
             </RelativeLayout>
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/layout_name"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
+                    style="@style/CommonTagWithEdit"
                     android:layout_height="wrap_content"
                     android:text="@string/staff_name_m"/>
                 <TextView
+                    style="@style/CommonTagWithEdit"
                     android:id="@+id/tv_admin_name"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="david"/>
-            </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/btn_admin_edit"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/edit"/>
+                </RelativeLayout>
+            </LinearLayout>
             <RelativeLayout
                 android:id="@+id/layout_company"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/text_company"
+                    style="@style/CommonTagWithEdit"
                     android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/staff_company_m"/>
                 <TextView
                     android:id="@+id/tv_admin_company"
-                    android:layout_alignParentRight="true"
+                    style="@style/CommonTagWithEdit"
+                    android:layout_toRightOf="@+id/text_company"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="cm"/>
             </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <Button
-                    android:layout_alignParentRight="true"
-                    android:id="@+id/btn_admin_edit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="edit"/>
-            </RelativeLayout>
+
             <Button
                 android:layout_alignParentRight="true"
+                style="@style/BlueButton"
+                android:layout_marginTop="15dp"
                 android:id="@+id/btn_edit_passwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -81,6 +87,7 @@
             <Button
                 android:layout_alignParentRight="true"
                 android:id="@+id/btn_logout"
+                style="@style/BlueButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/staff_logout"/>
@@ -88,8 +95,13 @@
 
         <LinearLayout
             android:layout_marginLeft="50dp"
+            android:background="@drawable/layout_white"
             android:layout_toRightOf="@id/layout_admin"
-            android:layout_width="450dp"
+            android:layout_width="550dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -97,19 +109,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:textColor="@color/common_title_blue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/CommonTag"
                     android:text="@string/staff_admin_list"/>
                 <Button
                     android:layout_alignParentRight="true"
                     android:id="@+id/btn_add_admin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="add"/>
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/add"
+                    />
             </RelativeLayout>
 
             <ListView
                 android:id="@+id/lv_admin"
+                android:paddingLeft="20dp"
+                android:paddingRight="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"/>
 
@@ -117,19 +135,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    style="@style/CommonTag"
+                    android:textColor="@color/common_title_blue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/staff_staff_list"/>
                 <Button
                     android:layout_alignParentRight="true"
                     android:id="@+id/btn_add_staff"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="add"/>
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/add"/>
             </RelativeLayout>
 
             <ListView
                 android:id="@+id/lv_staff"
+                android:paddingLeft="20dp"
+                android:paddingRight="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
