--- a/yljapp/src/main/res/layout/content_task.xml
+++ b/yljapp/src/main/res/layout/content_task.xml
@@ -4,22 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ylj.task.TaskActivity"
     tools:showIn="@layout/activity_task">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_centerInParent="true">
+        android:layout_height="600dp">
 
         <LinearLayout
             android:id="@+id/layout_task"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
+            android:padding="25dp"
+            android:layout_marginLeft="50dp"
+            android:background="@drawable/layout_white"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -33,7 +31,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_centerInParent="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/task" />
             </RelativeLayout>
 
 
@@ -48,11 +46,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/CommonTagWithEdit"
                         android:layout_height="wrap_content"
                         android:text="@string/task_name" />
 
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:id="@+id/tv_task_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -64,11 +63,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/CommonTagWithEdit"
                         android:layout_height="wrap_content"
                         android:text="@string/task_road" />
 
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:id="@+id/tv_road_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -80,11 +80,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/CommonTagWithEdit"
                         android:layout_height="wrap_content"
                         android:text="@string/task_status" />
 
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:id="@+id/tv_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -97,15 +98,17 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/CommonTagWithEdit"
                         android:layout_height="wrap_content"
                         android:text="@string/task_road_width" />
 
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:id="@+id/tv_road_width"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/task_meter" />
@@ -118,15 +121,17 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/CommonTagWithEdit"
                         android:layout_height="wrap_content"
                         android:text="@string/task_road_length" />
 
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:id="@+id/tv_road_length"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
+                        style="@style/CommonTagWithEdit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/task_meter" />
@@ -140,16 +145,23 @@
                 android:layout_height="wrap_content">
 
                 <Button
+                    android:layout_marginTop="10dp"
+                    style="@style/BlueSmallButton"
                     android:id="@+id/btn_task_edit"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="edit" />
+                    android:text="@string/task_edit" />
             </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="400dp"
+            android:layout_width="550dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="30dp"
+            android:background="@drawable/layout_white"
             android:layout_height="match_parent"
             android:layout_marginLeft="50dp"
             android:layout_toRightOf="@id/layout_task"
@@ -162,6 +174,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    style="@style/CommonTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_test_list" />
@@ -179,6 +192,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:textSize="30sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_not_adjust"/>
@@ -187,6 +201,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
+                        style="@style/BlueSmallButton"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
                         android:id="@+id/btn_enter_adjust"
                         android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
@@ -201,12 +218,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
+                    style="@style/BlueSmallButton"
+                    android:visibility="gone"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:layout_alignParentRight="true"
                     android:id="@+id/btn_finish_task"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="finish task" />
                 <Button
+                    style="@style/BlueSmallButton"
+                    android:layout_alignParentRight="true"
                     android:layout_toLeftOf="@id/btn_finish_task"
                     android:id="@+id/btn_enter_test"
                     android:layout_width="wrap_content"
