--- a/yljapp/src/main/res/layout/fragment_not_finish_task.xml
+++ b/yljapp/src/main/res/layout/fragment_not_finish_task.xml
@@ -13,18 +13,21 @@
             android:layout_width="400dp"
             android:layout_height="wrap_content">
             <RelativeLayout
+                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    style="@style/CommonTag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/task_task_list"/>
                 <Button
                     android:id="@+id/btn_add_task"
                     android:layout_alignParentRight="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="add"/>
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/add"/>
             </RelativeLayout>
             <ListView
                 android:id="@+id/lv_task"
