--- a/yljapp/src/main/res/layout/listview_manager_admin.xml
+++ b/yljapp/src/main/res/layout/listview_manager_admin.xml
@@ -15,29 +15,47 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_name"
+                android:textColor="@color/common_sub_text_grep"
+                android:textSize="@dimen/common_small_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="@color/common_sub_text_grep"
+                android:textSize="@dimen/common_small_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="("/>
             <TextView
+                android:textColor="@color/common_sub_text_grep"
+                android:textSize="@dimen/common_small_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
                 android:id="@+id/tv_account_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="@color/common_sub_text_grep"
+                android:textSize="@dimen/common_small_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=")"/>
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_company"
+                android:layout_marginRight="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -50,17 +68,17 @@
 
     <Button
         android:id="@+id/btn_edit"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:text="edit"/>
+        style="@style/EditButton"
+        android:focusable="false" />
     <Button
         android:id="@+id/btn_detele"
+        style="@style/DeleteButton"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
         android:layout_toLeftOf="@id/btn_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:text="delete"/>
+        android:focusable="false" />
 </RelativeLayout>
 
