基本实现taskactivity；test序列化

--- a/yljapp/src/main/res/layout/content_task.xml
+++ b/yljapp/src/main/res/layout/content_task.xml
@@ -169,6 +169,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_test"
+                android:paddingLeft="10dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -180,14 +181,32 @@
                     android:text="@string/task_test_list" />
 
                 <ListView
+                    android:paddingLeft="20dp"
                     android:id="@+id/lv_test"
                     android:layout_width="match_parent"
                     android:layout_height="200dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="200dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/layout_no_test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:textSize="35sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/task_not_adjust"/>
+
             </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/layout_reslut"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
@@ -201,19 +220,39 @@
                     android:text="@string/task_enter_result" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/layout_enter_test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    style="@style/BlueSmallButton"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/btn_enter_test"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/task_enter_test" />
+            </RelativeLayout>
+
             <LinearLayout
+                android:visibility="gone"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
                 android:id="@+id/layout_adjust"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:textSize="30sp"
+                    android:textSize="35sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_not_adjust"/>
 
                 <RelativeLayout
+                    android:layout_marginTop="200dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
@@ -228,29 +267,6 @@
                 </RelativeLayout>
 
             </LinearLayout>
-
-            <RelativeLayout
-                android:id="@+id/layout_enter_test"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <Button
-                    style="@style/BlueSmallButton"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:layout_alignParentRight="true"
-                    android:id="@+id/btn_finish_task"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/task_finish_task" />
-                <Button
-                    style="@style/BlueSmallButton"
-                    android:layout_marginRight="7dp"
-                    android:layout_toLeftOf="@id/btn_finish_task"
-                    android:id="@+id/btn_enter_test"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/task_enter_test" />
-            </RelativeLayout>
 
         </LinearLayout>
 
